[project]
name = "fst_python_bindings"
version = "0.1.0"
description = "Search over large sets of strings"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.md"}
keywords = ["fst", "levenstein", "fsm", "search"]
authors = [
  {email = "hukumka212@gmail.com"},
]
maintainers = [
  {name = "hukumka", email = "hukumka212@gmail.com"}
]

dependencies = []

[project.urls]
repository = "https://github.com/hukumka/fst_python_bindings/github.com"
